# imposter

./: CHANGELOG.md  README.md  justfile  pyproject.toml  shell.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  python.yml  release.yml
src/imposter/: __main__.py  git_operations.py  main.py  profiles.py
